[tool.poetry]
name = "luogu-art"
version = "0.2.1"
description = "Fetch and display article content from Luogu."
authors = ["weilycoder <weily2009@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
bs4 = "^0.0.2"
requests = "^2.32.3"
pyinstaller = "^6.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
